sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:19: error: too many arguments for method insertionSort: ()Unit
    insertionSort(ecart)
                 ^